# robot-sandbox

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  package.xml  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.claude/: settings.json  settings.local.json
.claude/skills/arst-nav/: SKILL.md
.claude/skills/arst-test/: SKILL.md
.opencode/: opencode.json
.opencode/agents/: vision.md
baseline_results/: baseline_results.csv  office_brutal_001_20260303T213235.json  office_brutal_001_20260303T213449.json  office_brutal_001_20260303T213641.json  office_easy_001_20260303T205652.json  office_easy_001_20260303T205835.json  office_easy_001_20260303T210034.json  office_easy_001_20260303T210217.json  office_hard_001_20260303T212402.json  office_hard_001_20260303T212618.json  office_hard_001_20260303T212804.json  office_hard_001_20260303T213004.json  office_medium_001_20260303T210435.json  office_medium_001_20260303T210742.json  office_medium_001_20260303T210958.json  office_medium_001_20260303T212014.json  office_perception_stress_001_20260303T213946.json  office_perception_stress_001_20260303T214252.json
config/: derpbot.rviz
config/metrics/: explore_detect_metrics.yaml
config/robots/: derpbot.yaml  ekf.yaml  turtlebot4.yaml
config/scenarios/: office_explore_detect.yaml  smoke_test.yaml  warehouse_explore_detect.yaml
config/scenarios/basement_find/: easy.yaml  medium.yaml
config/scenarios/office_explore_detect/: brutal.yaml  easy.yaml  hard.yaml  medium.yaml  perception_stress.yaml
config/scenarios/tests/: flicker_test.yaml  integration_test.yaml
docker/: Dockerfile
docs/: AGENT_HANDOFF.md  ARST_Project_Plan.md  AUTONOMOUS_AGENT_GUIDE.md  NEXT_SESSION_PROMPT.md  ROADMAP.md  STATE.md  environment_variations.md  leaderboard.html  leaderboard.json  visual_testing.md
launch/: arst_sim.launch.py  spawn_robot.launch.py
results/submissions/: example_benchmark_submission.yaml
results/submissions/derpbot-explorer-v1/: benchmark_submission.yaml  brutal_seed1_run1.json  brutal_seed1_run2.json  brutal_seed1_run3.json  brutal_seed2_run1.json  brutal_seed2_run2.json  brutal_seed2_run3.json  brutal_seed3_run1.json  brutal_seed3_run2.json  brutal_seed3_run3.json  brutal_seed4_run1.json  brutal_seed4_run2.json  brutal_seed4_run3.json  brutal_seed5_run1.json  brutal_seed5_run2.json  brutal_seed5_run3.json  (+60 more)
robots/: robot_interface.py
robots/derpbot/: __init__.py  derpbot.py
scripts/: aggregate_results.py  baseline_to_csv.py  despawn_robot.sh  detection_viz.py  download_fuel_models.sh  generate_basement_meshes.py  generate_basement_textures.py  generate_leaderboard.py  human_detector_node.py  kill_sim.sh  map_publisher.py  random_agent.py  rescore_submissions.py  robot_control.py  robot_inspect.py  rtf_monitor.py  run_batch.sh  run_human_baseline.sh  run_random_baseline.sh  run_scenario.sh  summarize_random_baseline.py  test_sensors.py  validate_submission.py  world_state.py
src/metrics/: base_metric.py  collision_count.py  detection_metrics.py  detection_source_node.py  evaluator.py  exploration_coverage.py  meters_traveled.py  near_miss_tracker.py  object_detection_tracker.py  proximity_tracker.py  reporter.py  revisit_ratio.py  scoring.py  time_metrics.py
src/scenario_runner/: __main__.py  flicker_controller.py  launcher.py  mission_server.py  patrol_bot_controller.py  reset.py  runner.py
src/utils/: config_loader.py  gz_transport.py  logging_setup.py  ros_helpers.py
src/world_manager/: object_placer.py  template_loader.py  world_generator.py
tests/: test_flicker_controller.py  test_integration.py  test_metrics.py  test_object_placer.py  test_scenario_config.py  test_scoring.py  test_world_generation.py  test_world_generator.py
worlds/generators/: place_objects.py
(+407 files in other folders)
