[metadata]
name = arst
version = 0.1.0

[options]
packages = find:
package_dir = =src
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    arst-run = scenario_runner.__main__:main
    arst-coverage-node = metrics.exploration_coverage:main
    arst-detection-node = metrics.detection_source_node:main

[tool:pytest]
testpaths = tests
